[package]
name = "frlg-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
convert_case = "0.6"
image = "0.24"
png = "0.17"
serde_json = "1"
serde = { version = "1", features = ["derive"] }