[package]
name = "frlg-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
convert_case = "0.6"
env_logger = "0.11.5"
image = "0.24"
log = "0.4.22"
png = "0.17"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
